--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,58 +1,109 @@
-trigger:
-- '*'
+### YamlMime:Yaml 
 
-pool:
-  vmImage: 'ubuntu-20.04'
-  demands:
-  - npm
+trigger: 
 
-variables:
-  buildConfiguration: 'Release'
-  wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
-  dotnetSdkVersion: '5.x'
+- '*' 
 
-steps:
-- task: UseDotNet@2
-  displayName: 'Use .NET SDK $(dotnetSdkVersion)'
-  inputs:
-    version: '$(dotnetSdkVersion)'
+variables: 
 
-- task: Npm@1
-  displayName: 'Run npm install'
-  inputs:
-    verbose: false
+  buildConfiguration: Release 
 
-- script: './node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)'
-  displayName: 'Compile Sass assets'
+stages: 
 
-- task: gulp@1
-  displayName: 'Run gulp tasks'
+- stage: Build 
 
-- script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
-  displayName: 'Write build info'
-  workingDirectory: $(wwwrootDir)
+  displayName: Build the web application 
 
-- task: DotNetCoreCLI@2
-  displayName: 'Restore project dependencies'
-  inputs:
-    command: 'restore'
-    projects: '**/*.csproj'
+  jobs: 
 
-- task: DotNetCoreCLI@2
-  displayName: 'Build the project - $(buildConfiguration)'
-  inputs:
-    command: 'build'
-    arguments: '--no-restore --configuration $(buildConfiguration)'
-    projects: '**/*.csproj'
+  - job: Build 
 
-- task: DotNetCoreCLI@2
-  displayName: 'Publish the project - $(buildConfiguration)'
-  inputs:
-    command: 'publish'
-    projects: '**/*.csproj'
-    publishWebProjects: false
-    arguments: '--no-build --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/$(buildConfiguration)'
-    zipAfterPublish: true
+    displayName: Build job 
 
-- publish: '$(Build.ArtifactStagingDirectory)'
-  artifact: drop
+    pool: 
+
+      vmImage: ubuntu-20.04 
+
+      demands: 
+
+      - npm 
+
+    variables: 
+
+      wwwrootDir: Tailspin.SpaceGame.Web/wwwroot 
+
+      dotnetSdkVersion: 5.x 
+
+    steps: 
+
+    - task: UseDotNet@2 
+
+      displayName: Use .NET Core SDK $(dotnetSdkVersion) 
+
+      inputs: 
+
+        version: $(dotnetSdkVersion) 
+
+    - task: Npm@1 
+
+      displayName: Run npm install 
+
+      inputs: 
+
+        verbose: false 
+
+    - script: ./node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir) 
+
+      displayName: Compile Sass assets 
+
+    - task: gulp@1 
+
+      displayName: Run gulp tasks 
+
+    - script: echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt 
+
+      displayName: Write build info 
+
+      workingDirectory: $(wwwrootDir) 
+
+    - task: DotNetCoreCLI@2 
+
+      displayName: Restore project dependencies 
+
+      inputs: 
+
+        command: restore 
+
+        projects: '**/*.csproj' 
+
+    - task: DotNetCoreCLI@2 
+
+      displayName: Build the project - $(buildConfiguration) 
+
+      inputs: 
+
+        command: build 
+
+        arguments: --no-restore --configuration $(buildConfiguration) 
+
+        projects: '**/*.csproj' 
+
+    - task: DotNetCoreCLI@2 
+
+      displayName: Publish the project - $(buildConfiguration) 
+
+      inputs: 
+
+        command: publish 
+
+        projects: '**/*.csproj' 
+
+        publishWebProjects: false 
+
+        arguments: --no-build --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/$(buildConfiguration) 
+
+        zipAfterPublish: true 
+
+    - publish: $(Build.ArtifactStagingDirectory) 
+
+      artifact: drop 
